# fst

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  appveyor.yml  build.rs  deny.toml
.github/workflows/: ci.yml  release-plz.yml
bench/: Cargo.toml
bench/src/: bench.rs  lib.rs
benches/: build.rs  search.rs
ci/: before_deploy.sh  script.sh
data/: wiki-urls-10000  words-10000  words-100000
examples/: contains.rs
fst-bin/: Cargo.toml
fst-bin/src/: app.rs  main.rs  merge.rs  util.rs
fst-bin/src/cmd/: csv.rs  dot.rs  dupes.rs  fuzzy.rs  grep.rs  hamming.rs  map.rs  mod.rs  node.rs  range.rs  rust.rs  set.rs  union.rs  verify.rs
fst-capi/: Cargo.toml
fst-capi/ctest/: compile  test.c
fst-capi/include/: fst.h
fst-capi/src/: api.rs  error.rs  lib.rs
fst-levenshtein/: Cargo.toml
fst-levenshtein/src/: error.rs  lib.rs
fst-regex/: Cargo.toml
fst-regex/src/: compile.rs  dfa.rs  error.rs  lib.rs  sparse.rs
proptest-regressions/raw/: tests.txt
scripts/: gen-common-inputs
src/: algebra.rs  automaton.rs  build.rs  bytes.rs  error.rs  ioutil.rs  lib.rs  map.rs  node.rs  pack.rs  registry.rs  set.rs  stream.rs  tests.rs
src/automaton/: contains.rs  damerau_levenshtein.rs  dyn_levenshtein.rs  levenshtein.rs  levenshtein_dfa.rs  levenshtein_resultitem.rs  mod.rs
src/fst/: build.rs  merge.rs  mod.rs  node.rs  pack.rs  registry.rs  registry_any.rs  registry_minimal.rs  tests.rs
src/hamming/: mod.rs
src/levenshtein/: mod.rs
src/raw/: build.rs  common_inputs.rs  counting_writer.rs  crc32.rs  crc32_table.rs  error.rs  merge.rs  mmap.rs  mod.rs  node.rs  ops.rs  pack.rs  registry.rs  registry_minimal.rs  shared_vector_slice.rs  tests.rs
src/regex/: compile.rs  dfa.rs  error.rs  mod.rs  sparse.rs
tests/: levenshtein_test.rs  test.rs
