[package]
name = "fst"
version = "0.3.5"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Use finite state transducers to compactly represents sets or maps of many
strings (> 1 billion is possible).
"""
documentation = "https://docs.rs/fst"
homepage = "https://github.com/BurntSushi/fst"
repository = "https://github.com/BurntSushi/fst"
readme = "README.md"
keywords = ["search", "information", "retrieval", "dictionary", "map"]
license = "Unlicense/MIT"
edition = "2018"

[workspace]
members = ["bench", "fst-bin"]

[features]
default = []
levenshtein = ["utf8-ranges"]

[dependencies]
byteorder = "1.3.4"
utf8-ranges = { version = "1.0.4", optional = true }

[dev-dependencies]
fnv = "1.0.6"
memmap = "0.7"
quickcheck = { version = "0.9.2", default-features = false }
rand = "0.7.3"

[profile.release]
debug = true

[profile.bench]
debug = true

[package.metadata.docs.rs]
features = ["levenshtein"]
