[package]
name = "fst-bin"
version = "0.3.0"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line tool for using finite state transducers to compactly represents
sets or maps of many strings (> 1 billion is possible). The command line tool
exposes functionality to search FSTs using regular expressions, Levenshtein
automata and range queries.
"""
documentation = "http://burntsushi.net/rustdoc/fst/"
homepage = "https://github.com/BurntSushi/fst"
repository = "https://github.com/BurntSushi/fst"
keywords = ["search", "information", "retrieval", "dictionary", "map"]
license = "Unlicense/MIT"
edition = "2018"

[[bin]]
name = "fst"
path = "src/main.rs"

[dependencies]
bit-set = "0.4"
chan = "0.1"
csv = "1.1.3"
docopt = "1.1"
fst = { path = "..", version = "0.3", features = ["levenshtein"] }
lines = "0.0"
num_cpus = "1.5"
regex-automata = { version = "*", path = "/home/andrew/rust/regex-automata", features = ["transducer"] }
serde = { version = "1.0.104", features = ["derive"] }
tempdir = "0.3"

[profile.release]
debug = true
opt-level = 3
