[package]
name = "fst-bin"
version = "0.3.0"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A command line tool for using finite state transducers to compactly represents
sets or maps of many strings (> 1 billion is possible). The command line tool
exposes functionality to search FSTs using regular expressions, Levenshtein
automata and range queries.
"""
documentation = "http://burntsushi.net/rustdoc/fst/"
homepage = "https://github.com/BurntSushi/fst"
repository = "https://github.com/BurntSushi/fst"
keywords = ["search", "information", "retrieval", "dictionary", "map"]
license = "Unlicense/MIT"

[[bin]]
name = "fst"
path = "src/main.rs"

[dependencies]
bit-set = "0.4"
chan = "0.1"
csv = "~1.0.0-beta.3"
docopt = "0.8"
fst = { path = "..", version = "0.3" }
fst-regex = { path = "../fst-regex", version = "0.2" }
fst-levenshtein = { path = "../fst-levenshtein", version = "0.2" }
lines = "0.0"
num_cpus = "1.5"
serde = "1"
serde_derive = ">= 1, <1.0.83"
tempdir = "0.3"

# Lockdowns for Rust 1.24 support
cfg-if = "= 0.1.6"
csv-core = "= 0.1.4"
lazy_static = "~1.2"
memchr = "= 2.1.2"

[profile.release]
debug = true
opt-level = 3
