[package]
name = "fst-levenshtein"
version = "0.2.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Search finite state transducers with fuzzy queries using Levenshtein automata.
"""
documentation = "https://docs.rs/fst-levenshtein"
homepage = "https://github.com/BurntSushi/fst"
repository = "https://github.com/BurntSushi/fst"
keywords = ["search", "information", "retrieval", "dictionary", "map"]
license = "Unlicense/MIT"

[features]
mmap = ["fst/mmap"]
default = ["mmap"]

[dependencies]
fst = { path = "..", version = "0.3.1", default-features = false }
utf8-ranges = "1"
