[package]
name = "fst-levenshtein"
version = "0.3.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
DEPRECATED. Use 'fst' crate with 'levenshtein' feature instead.
"""
documentation = "https://docs.rs/fst-levenshtein"
homepage = "https://github.com/BurntSushi/fst"
repository = "https://github.com/BurntSushi/fst"
keywords = ["search", "information", "retrieval", "dictionary", "map"]
license = "Unlicense/MIT"
edition = "2018"

[dependencies]
fst = "0.3.1"
utf8-ranges = "1"
