[package]
name = "fst-regex"
version = "0.2.0"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Search finite state transducers with regular expression.
"""
documentation = "https://docs.rs/fst-regex"
homepage = "https://github.com/BurntSushi/fst"
repository = "https://github.com/BurntSushi/fst"
keywords = ["search", "information", "retrieval", "dictionary", "map"]
license = "Unlicense/MIT"

[dependencies]
fst = { path = "..", version = "0.3" }
regex-syntax = "0.3"
utf8-ranges = "0.1"
