[package]
name = "fst-regex"
version = "0.2.2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Search finite state transducers with regular expression.
"""
documentation = "https://docs.rs/fst-regex"
homepage = "https://github.com/BurntSushi/fst"
repository = "https://github.com/BurntSushi/fst"
keywords = ["search", "information", "retrieval", "dictionary", "map"]
license = "Unlicense/MIT"
edition = "2018"

[features]
mmap = ["fst/mmap"]
default = ["mmap"]

[dependencies]
fst = { path = "..", version = "0.3.1", default-features = false }
regex-syntax = "0.3"
utf8-ranges = "1"
