[package]
name = "fst-regex"
version = "0.3.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
DEPRECATED. Use 'regex-automata' crate with 'transducer' feature instead.
"""
documentation = "https://docs.rs/fst-regex"
homepage = "https://github.com/BurntSushi/fst"
repository = "https://github.com/BurntSushi/fst"
keywords = ["search", "information", "retrieval", "dictionary", "map"]
license = "Unlicense/MIT"
edition = "2018"

[dependencies]
fst = { version = "0.4.7", default-features = false }
regex-syntax = "0.3"
utf8-ranges = "1"
